--- a/css/zotpress.metabox.css
+++ b/css/zotpress.metabox.css
@@ -4,8 +4,10 @@
     
     .ui-autocomplete.zp-autocomplete {
         background: none;
-        background-color: #F6F6F6;
+        background-color: #fff;
         border: 1px solid #ddd;
+		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+		-moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
         margin: 0;
         padding: 0;
         max-height: 200px;
@@ -20,48 +22,39 @@
     .ui-autocomplete.zp-autocomplete li {
         background: none;
         border: none;
-        /*font: normal 11px/14px "Arial", sans-serif;*/
-        font-size: 0.85em;
+		font-weight: 400;
+        font-size: 0.75rem;
 		line-height: 1.2;
         margin: 0;
         padding: 0;
         white-space: normal;
-        width: 253px;
+        /*width: 253px;*/
     }
     .ui-autocomplete.zp-autocomplete-wide li {
-        width: 775px;
+        /*width: 775px;*/
     }
+	
+	.ui-autocomplete.zp-autocomplete-wide li strong {
+		font-weight: 600;
+	}
     
     .ui-autocomplete.zp-autocomplete li a {
         background: none;
         border: none;
-        /*border-top: 1px solid #fff;*/
         border-bottom: 1px solid #ddd;
         color: #666;
-        /*font: normal 11px/14px "Arial", sans-serif;*/
         margin: 0;
-        padding: 6px 25px 6px 10px;
+        padding: 6px 10px 6px 10px;
     }
     .ui-autocomplete.zp-autocomplete li a.ui-state-focus,
     .ui-autocomplete.zp-autocomplete li a.ui-state-hover {
         background: none;
-        background-color: #8ec5fb;
-        border: none;
-        /*border-top: 1px solid #7ba5d7;*/
-        border-bottom: 1px solid #a4b0bf;
-        color: #fff;
-        /*font: normal 11px/14px "Arial", sans-serif;*/
+        background-color: #eee; /* 8ec5fb */
         margin: 0;
-        padding: 6px 25px 6px 10px;
-        /*text-shadow: 1px 1px #7bbbfb;*/
         
         border-radius: 0;
         -moz-border-radius: 0;
         -webkit-border-radius: 0;
-    }
-    .ui-autocomplete.zp-autocomplete li.first a.ui-state-focus,
-    .ui-autocomplete.zp-autocomplete li.first a.ui-state-hover {
-        /*border-top: 1px solid #8ec5fb;*/
     }
     
     .ui-tabs .ui-tabs-nav li a,
@@ -98,12 +91,11 @@
     }
     input#zp-ZotpressMetaBox-Biblio-Citations-Search.ui-autocomplete-loading,
     input#zp-ZotpressMetaBox-Citations-Search.ui-autocomplete-loading {
-        background: #fff url("../images/loading_select.gif") no-repeat 225px center;
+        background: #fff url("../images/loading_default.gif") no-repeat 225px center;
     }
     input#zp-ZotpressMetaBox-Biblio-Citations-Search.help,
     input#zp-ZotpressMetaBox-Citations-Search.help {
         color: #aaa;
-        font-style: italic;
     }
     
     div#zp-ZotpressMetaBox-Biblio-Shortcode,
@@ -113,7 +105,6 @@
     div#zp-ZotpressMetaBox-Biblio-Shortcode-Inner,
     div#zp-ZotpressMetaBox-InTextCreator-Shortcode-Inner {
         background-color: #f6f6f6;
-        /*border: 1px solid #eee;*/
         display: none;
         margin: 0.75em 0 0 0;
         padding: 0.75em;
@@ -124,14 +115,12 @@
         color: #fff;
         float: right;
         line-height: 1.75em;
-        /*font-family: "Arial", sans-serif;*/
         height: auto;
     }
     #ZotpressMetaBox .ui-widget-content a#zp-ZotpressMetaBox-Biblio-Clear-Button,
     #ZotpressMetaBox .ui-widget-content a#zp-ZotpressMetaBox-InTextCreator-Clear-Button {
         float: left;
         line-height: 1.75em;
-        /*font-family: "Arial", sans-serif;*/
         height: auto;
     }
     
@@ -148,7 +137,6 @@
     div#ZotpressMetaBox div#zp-ZotpressMetaBox-Biblio-Shortcode label,
     div#ZotpressMetaBox div#zp-ZotpressMetaBox-InTextCreator-Shortcode label
     {
-        /*font-family: 'Georgia', serif;*/
         font-size: 0.85em;
         display: block;
 		line-height: 1em;
@@ -176,98 +164,85 @@
     
     div#zp-ZotpressMetaBox-Biblio-Citations-List,
     div#zp-ZotpressMetaBox-Citations-List {
-        padding: 2px;
+        padding: 0 1rem;
     }
     
     div#zp-ZotpressMetaBox-Biblio-Citations-List div.item,
     div#zp-ZotpressMetaBox-Citations-List div.item {
         position: relative;
-        background-color: #deeefe; /* d9f5ff */
-        border: 1px solid #8ec5fb;
-        color: #5486bc; /* 4a7bc6 */
-        cursor: default;
-        float: left;
-        /*font: normal 0.8em/1.2em "Arial", sans-serif;*/
-        font-size: 0.85em;
+        border-top: 1px solid #eee;
+		font-weight: 400;
+        font-size: 0.7rem;
 		line-height: 1.2;
-        margin: 2px;
-        padding: 3px 5px;
-        
-        border-radius: 10px;
-        -moz-border-radius: 10px;
-        -webkit-border-radius: 10px;
+        padding: 0.5rem 0;
+		width: 100%;
     }
+    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item:first-child,
+    div#zp-ZotpressMetaBox-Citations-List div.item:first-child {
+		border-top: none;
+	}
     
     div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .label,
     div#zp-ZotpressMetaBox-Citations-List div.item .label {
-        padding-right: 33px;
+		display: block;
+        width: 90%;
+    }
+	
+    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .options,
+    div#zp-ZotpressMetaBox-Citations-List div.item .options {
+		margin: 0.5rem 0;
+		display: block;
+        width: 90%;
+    }
+	div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .options:before,
+	div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .options:after,
+    div#zp-ZotpressMetaBox-Citations-List div.item .options:before,
+    div#zp-ZotpressMetaBox-Citations-List div.item .options:after {
+		content: "";
+		display: table;
+	}
+	div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .options:after,
+    div#zp-ZotpressMetaBox-Citations-List div.item .options:after {
+		clear: both;
+	}
+    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .options label,
+    div#zp-ZotpressMetaBox-Citations-List div.item .options label {
+		float: left;
+		line-height: 1.5;
+		margin-right: 0.2rem;
+	}
+    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .options input,
+    div#zp-ZotpressMetaBox-Citations-List div.item .options input {
+		text-transform: uppercase;
+		font-weight: 600;
+		float: left;
+		font-size: 0.7rem;
+		padding: 0 0.2rem;
+		width: 40%;
+	}
+	
+    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .item_key,
+    div#zp-ZotpressMetaBox-Citations-List div.item .item_key {
+        display: block;
+		font-weight: 600;
+		margin-top: 0.25rem;
     }
     
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .toggle,
     div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .delete,
-    div#zp-ZotpressMetaBox-Citations-List div.item .toggle,
     div#zp-ZotpressMetaBox-Citations-List div.item .delete {
         position: absolute;
-        background-color: #f0fbff;
-        border: 1px solid #b8defe;
+        top: 0.5rem;
+        right: 0;
+        background-color: #e14d43;
+		color: #fff;
         cursor: pointer;
-        padding: 6px;
-        padding-right: 7px;
+		font-size: 0.8rem;
+		line-height: 1;
+        padding: 0.05rem 0.25rem;
         
         border-radius: 10px;
         -moz-border-radius: 10px;
         -webkit-border-radius: 10px;
-    }
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .toggle,
-    div#zp-ZotpressMetaBox-Citations-List div.item .toggle {
-        top: 2px;
-        right: 19px;
-        background: #F0FBFF url('../images/sprite.png') no-repeat 3px -468px;
-    }
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .toggle.active,
-    div#zp-ZotpressMetaBox-Citations-List div.item .toggle.active {
-        background-color: #b9dbfd;
-    }
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .delete,
-    div#zp-ZotpressMetaBox-Citations-List div.item .delete {
-        top: 2px;
-        right: 3px;
-        background: #F0FBFF url('../images/sprite.png') no-repeat -54px -469px;
-    }
-    
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item div.options,
-    div#zp-ZotpressMetaBox-Citations-List div.item div.options {
-        background-color: #b9dbfd; /* b8defe */
-        display: none;
-        margin: 4px 0 2px;
-        padding: 3px;
-        
-        border-radius: 0 0 8px 8px;
-        -moz-border-radius: 0 0 8px 8px;
-        -webkit-border-radius: 0 0 8px 8px;
-    }
-    
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item div.options .id,
-    div#zp-ZotpressMetaBox-Citations-List div.item div.options .id {
-        cursor: text;
-        padding: 3px 5px;
-    }
-    
-    div#ZotpressMetaBox div#zp-ZotpressMetaBox-Biblio-Citations-List div.item div.options label,
-    div#ZotpressMetaBox div#zp-ZotpressMetaBox-Citations-List div.item div.options label {
-        /*font: normal 1em/1em "Arial", sans-serif;*/
-        margin: 0 0 0 4px;
-        text-transform: capitalize;
-    }
-    
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item div.options input,
-    div#zp-ZotpressMetaBox-Citations-List div.item div.options input {
-        border: 1px solid #4A7BC6;
-        color: #4A7BC6;
-        /*font: normal 1em/1em "Arial", sans-serif;*/
-        padding: 1px 2px 0;
-        vertical-align: middle;
-        width: 50px;
     }
     
     div#zp-ZotpressMetaBox-Biblio-Citations-List hr.clear,
@@ -468,14 +443,14 @@
         padding: 0;
     }
     
-    div#ZotpressMetaBox label {
+    div#zp-ZotpressMetaBox-Biblio-Options label,
+	div#zp-ZotpressMetaBox-InTextCreator-Options label{
         font-size: 0.85em;
         margin: 0;
 		padding: 0 1em;
         font-weight: bold;
     }
     div#ZotpressMetaBox div.zp-Tab label {
-        /*font-family: "Arial", sans-serif;*/
         font-size: 12px;
         display: block;
         margin: 0;
@@ -535,41 +510,6 @@
     .bibOnly {
         display: none;
     }
-    /*div#zp-ZotpressMetaBox-ShortcodeCreator-Text-InTextBib-Container {*/
-    /*    padding-top: 5px;*/
-    /*}*/
-    /*div#zp-ZotpressMetaBox-ShortcodeCreator-Text-InTextBib-Container input {*/
-    /*    font-size: 9px;*/
-    /*}*/
-
-    /*div#zp-ZotpressMetaBox-ShortcodeCreator .zp-Loading {*/
-    /*    background: transparent url('images/loading_list.gif') no-repeat top left;*/
-    /*    display: none;*/
-    /*    float: right;*/
-    /*    letter-spacing: -1000px;*/
-    /*    overflow: hidden;*/
-    /*    text-indent: -5000px;*/
-    /*    margin: -3px 75px 0 0;*/
-    /*    width: 32px;*/
-    /*    height: 32px;*/
-    /*}*/
-    /*div#zp-ZotpressMetaBox-ShortcodeCreator .zp-Success,*/
-    /*div#zp-ZotpressMetaBox-ShortcodeCreator .zp-Errors {*/
-    /*    color: #008040;*/
-    /*    display: none;*/
-    /*    float: right;*/
-    /*    font-family: "Verdana", sans-serif;*/
-    /*    font-size: 9px;*/
-    /*    font-weight: bold;*/
-    /*    padding: 8px;*/
-    /*    margin-right: 40px;*/
-    /*    width: 50px;*/
-    /*}*/
-    /*div#zp-ZotpressMetaBox-ShortcodeCreator .zp-Errors {*/
-    /*    color: #ff0000;*/
-    /*}*/
-    
-    /* END OF GENERIC METABOX CSS */
     
     
     
@@ -591,46 +531,4 @@
     }
     
     /* END OF CKEDIT STYLES */
-    
-    
-    
-    /* START OF TAB NAVIGATION */
-    
-    /*div#zp-ZotpressMetaBox-ShortcodeCreator-Nav {*/
-    /*    border-top: 1px solid #eee;*/
-    /*    background-color: #fbfbfb;*/
-    /*    height: 2em;*/
-    /*    */
-    /*    border-radius: 0 0 4px 4px;*/
-    /*    -moz-border-radius: 0 0 4px 4px;*/
-    /*    -webkit-border-radius: 0 0 4px 4px;*/
-    /*}*/
-    /**/
-    /*div#zp-ZotpressMetaBox-ShortcodeCreator-Nav a.prev,*/
-    /*div#zp-ZotpressMetaBox-ShortcodeCreator-Nav a.next {*/
-    /*    color: #666;*/
-    /*    display: block;*/
-    /*    float: left;*/
-    /*    font-size: 0.7em;*/
-    /*    padding: 0.5em 1em;*/
-    /*    text-decoration: none;*/
-    /*    text-transform: uppercase;*/
-    /*    width: 42.5%;*/
-    /*}*/
-    /*div#zp-ZotpressMetaBox-ShortcodeCreator-Nav a.next {*/
-    /*    float: right;*/
-    /*    margin-left: 1px;*/
-    /*    text-align: right;*/
-    /*}*/
-    /**/
-    /*div#zp-ZotpressMetaBox-ShortcodeCreator-Nav a:hover.prev,*/
-    /*div#zp-ZotpressMetaBox-ShortcodeCreator-Nav a:hover.next {*/
-    /*    color: #bbb;*/
-    /*}*/
-    /**/
-    /*div#zp-ZotpressMetaBox-ShortcodeCreator-Nav a.end {*/
-    /*    visibility: hidden;*/
-    /*}*/
-    
-    /* END OF TAB NAVIGATION */
     
