--- a/css/smoothness/jquery-ui-1.8.11.custom.css
+++ b/css/smoothness/jquery-ui-1.8.11.custom.css
@@ -61,18 +61,20 @@
 /*#ZotpressMetaBox .ui-widget input, #ZotpressMetaBox .ui-widget select, #ZotpressMetaBox .ui-widget textarea, #ZotpressMetaBox .ui-widget button { font-family: Verdana,Arial,sans-serif; font-size: 1em; }*/
 #ZotpressMetaBox .ui-widget-content { border: none; background: transparent; color: #222222; }
 #ZotpressMetaBox .ui-widget-content a { color: #222222; }
-#ZotpressMetaBox .ui-widget-header { border: 0; background: #F5F5F5; color: #222222; font-weight: normal; font-size: 0.85em !important; text-transform: uppercase; }
+#ZotpressMetaBox .ui-widget-header { border: 0; background: #fff; color: #222222; font-weight: normal; font-size: 0.85em !important; text-transform: uppercase; }
 #ZotpressMetaBox .ui-widget-header a { color: #222222; }
 
 /* Interaction states
 ----------------------------------*/
-#ZotpressMetaBox .ui-state-default, #ZotpressMetaBox .ui-widget-content .ui-state-default, #ZotpressMetaBox .ui-widget-header .ui-state-default { border: none; background: #e6e6e6; color: #666; float: left; margin: 0.35em 0 0 0.35em; }
+#ZotpressMetaBox .ui-state-default, #ZotpressMetaBox .ui-widget-content .ui-state-default, #ZotpressMetaBox .ui-widget-header .ui-state-default { border: none; background: #fff; color: #222; float: left; margin: 0; padding: 0.75em; }
+#ZotpressMetaBox .ui-state-default:before, #ZotpressMetaBox .ui-widget-content .ui-state-default:before, #ZotpressMetaBox .ui-widget-header .ui-state-default:before { content: " "; display: block; background: url('images/ui-icons_222222_256x240.png') -111px 339px; width: 20px; height: 20px; float: left; }
 #ZotpressMetaBox .ui-state-default a, #ZotpressMetaBox .ui-state-default a:link, #ZotpressMetaBox .ui-state-default a:visited { color: #555555; text-decoration: none; }
-#ZotpressMetaBox .ui-state-hover, #ZotpressMetaBox .ui-widget-content .ui-state-hover, #ZotpressMetaBox .ui-widget-header .ui-state-hover, #ZotpressMetaBox .ui-state-focus, #ZotpressMetaBox .ui-widget-content .ui-state-focus, #ZotpressMetaBox .ui-widget-header .ui-state-focus { background: #ccc; color: #000; }
+#ZotpressMetaBox .ui-state-hover, #ZotpressMetaBox .ui-widget-content .ui-state-hover, #ZotpressMetaBox .ui-widget-header .ui-state-hover, #ZotpressMetaBox .ui-state-focus, #ZotpressMetaBox .ui-widget-content .ui-state-focus, #ZotpressMetaBox .ui-widget-header .ui-state-focus { }
 #ZotpressMetaBox .ui-state-hover a, #ZotpressMetaBox .ui-state-hover a:hover { color: #212121; text-decoration: none; }
 #ZotpressMetaBox .ui-state-active, #ZotpressMetaBox .ui-widget-content .ui-state-active, #ZotpressMetaBox .ui-widget-header .ui-state-active { border: none; background: #ffffff; color: #222; }
-#ZotpressMetaBox .ui-state-active a, #ZotpressMetaBox .ui-state-active a:link, #ZotpressMetaBox .ui-state-active a:visited { color: #212121; text-decoration: none; }
-#ZotpressMetaBox .ui-widget :active { outline: none; }
+#ZotpressMetaBox .ui-state-active:before, #ZotpressMetaBox .ui-widget-content .ui-state-active:before, #ZotpressMetaBox .ui-widget-header .ui-state-active:before { content: " "; display: block; background: url('images/ui-icons_222222_256x240.png') -206px 292px; width: 20px; height: 20px; float: left; }
+#ZotpressMetaBox .ui-state-active a, #ZotpressMetaBox .ui-state-active a:link, #ZotpressMetaBox .ui-state-active a:visited, #ZotpressMetaBox .ui-state-active a:focus { color: #212121; text-decoration: none;  }
+#ZotpressMetaBox .ui-widget :active, #ZotpressMetaBox .ui-widget :focus { outline: none; box-shadow: none; }
 
 /* Interaction Cues
 ----------------------------------*/
@@ -304,7 +306,7 @@
 #ZotpressMetaBox .ui-tabs { position: relative; zoom: 1; } /* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
 #ZotpressMetaBox .ui-tabs #ZotpressMetaBox .ui-tabs-nav { margin: 0; padding: 0 0 0 1px; }
 #ZotpressMetaBox .ui-tabs #ZotpressMetaBox .ui-tabs-nav li { list-style: none; float: left; position: relative; top: 1px; margin: 0 1px 1px 0; border-bottom: 0 !important; padding: 0; white-space: nowrap; }
-#ZotpressMetaBox .ui-tabs .ui-tabs-nav li a { float: left; padding: .5em 1em; text-decoration: none; }
+#ZotpressMetaBox .ui-tabs .ui-tabs-nav li a { float: left; padding: 0.4em 0 0; text-decoration: none; }
 #ZotpressMetaBox .ui-tabs .ui-tabs-nav li.ui-tabs-selected { margin-bottom: 0; padding-bottom: 1px; }
 #ZotpressMetaBox .ui-tabs .ui-tabs-nav li.ui-tabs-selected a, #ZotpressMetaBox .ui-tabs .ui-tabs-nav li.ui-state-disabled a, #ZotpressMetaBox .ui-tabs .ui-tabs-nav li.ui-state-processing a { cursor: text; }
 #ZotpressMetaBox .ui-tabs .ui-tabs-nav li a, #ZotpressMetaBox .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a { cursor: pointer; } /* first selector in group seems obsolete, but required to overcome bug in Opera applying cursor: text overall if defined elsewhere... */
