--- a/css/zotpress.metabox.css
+++ b/css/zotpress.metabox.css
@@ -42,6 +42,7 @@
         background: none;
         border: none;
         border-bottom: 1px solid #ddd;
+		display: block;
         color: #666;
         margin: 0;
         padding: 6px 10px 6px 10px;
@@ -67,6 +68,10 @@
     
     
     /* START OF IN-TEXT CSS */
+    
+	div#zp-ZotpressMetaBox-InTextCreator {
+		display: none;
+	}
     
     div#zp-ZotpressMetaBox-Biblio-Citations,
     div#zp-ZotpressMetaBox-Citations {
@@ -100,6 +105,7 @@
     
     div#zp-ZotpressMetaBox-Biblio-Shortcode,
     div#zp-ZotpressMetaBox-InTextCreator-Shortcode {
+		background: #f5f5f5 none repeat scroll 0 0;
         padding: 0.75em;
     }
     div#zp-ZotpressMetaBox-Biblio-Shortcode-Inner,
@@ -162,12 +168,12 @@
     
     /* Start of Visual Indicator Item CSS */
     
-    div#zp-ZotpressMetaBox-Biblio-Citations-List,
+    div#zp-ZotpressMetaBox-List,
     div#zp-ZotpressMetaBox-Citations-List {
         padding: 0 1rem;
     }
     
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item,
+    div#zp-ZotpressMetaBox-List div.item,
     div#zp-ZotpressMetaBox-Citations-List div.item {
         position: relative;
         border-top: 1px solid #eee;
@@ -177,42 +183,39 @@
         padding: 0.5rem 0;
 		width: 100%;
     }
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item:first-child,
+    div#zp-ZotpressMetaBox-List div.item:first-child,
     div#zp-ZotpressMetaBox-Citations-List div.item:first-child {
 		border-top: none;
 	}
     
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .label,
+    div#zp-ZotpressMetaBox-List div.item .label,
     div#zp-ZotpressMetaBox-Citations-List div.item .label {
 		display: block;
         width: 90%;
     }
 	
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .options,
-    div#zp-ZotpressMetaBox-Citations-List div.item .options {
+    div#zp-ZotpressMetaBox-List div.item .options {
 		margin: 0.5rem 0;
-		display: block;
+		display: none;
         width: 90%;
     }
-	div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .options:before,
-	div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .options:after,
-    div#zp-ZotpressMetaBox-Citations-List div.item .options:before,
-    div#zp-ZotpressMetaBox-Citations-List div.item .options:after {
+	div#zp-ZotpressMetaBox-List.intext div.item .options {
+		display: block;
+	}
+	div#zp-ZotpressMetaBox-List div.item .options:before,
+	div#zp-ZotpressMetaBox-List div.item .options:after {
 		content: "";
 		display: table;
 	}
-	div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .options:after,
-    div#zp-ZotpressMetaBox-Citations-List div.item .options:after {
+	div#zp-ZotpressMetaBox-List div.item .options:after {
 		clear: both;
 	}
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .options label,
-    div#zp-ZotpressMetaBox-Citations-List div.item .options label {
+    div#zp-ZotpressMetaBox-List div.item .options label {
 		float: left;
 		line-height: 1.5;
 		margin-right: 0.2rem;
 	}
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .options input,
-    div#zp-ZotpressMetaBox-Citations-List div.item .options input {
+    div#zp-ZotpressMetaBox-List div.item .options input {
 		text-transform: uppercase;
 		font-weight: 600;
 		float: left;
@@ -221,14 +224,14 @@
 		width: 40%;
 	}
 	
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .item_key,
+    div#zp-ZotpressMetaBox-List div.item .item_key,
     div#zp-ZotpressMetaBox-Citations-List div.item .item_key {
         display: block;
 		font-weight: 600;
 		margin-top: 0.25rem;
     }
     
-    div#zp-ZotpressMetaBox-Biblio-Citations-List div.item .delete,
+    div#zp-ZotpressMetaBox-List div.item .delete,
     div#zp-ZotpressMetaBox-Citations-List div.item .delete {
         position: absolute;
         top: 0.5rem;
@@ -245,7 +248,7 @@
         -webkit-border-radius: 10px;
     }
     
-    div#zp-ZotpressMetaBox-Biblio-Citations-List hr.clear,
+    div#zp-ZotpressMetaBox-List hr.clear,
     div#zp-ZotpressMetaBox-Citations-List hr.clear {
         background: none;
         border: none;
@@ -271,7 +274,7 @@
     div#zp-ZotpressMetaBox-Biblio-Options,
     div#zp-ZotpressMetaBox-InTextCreator-Options {
         border-top: 1px solid #EEEEEE;
-        border-bottom: 1px solid #EEEEEE;
+        border-bottom: 1px solid #ddd;
         margin: 0;
     }
     
@@ -371,7 +374,7 @@
     
     div#zp-ZotpressMetaBox-Biblio-Options p.note,
     div#zp-ZotpressMetaBox-InTextCreator-Options p.note {
-        color: #999;
+        color: #666;
 		font-size: 0.75em;
         margin: 0 1em 0.75em;
     }
@@ -510,6 +513,16 @@
     .bibOnly {
         display: none;
     }
+	
+	
+	div#ZotpressMetaBox div#zp-ZotpressMetaBox-Type {
+		border-top: 1px solid #eee;
+		padding: 0 0.75em;
+	}
+	div#ZotpressMetaBox div#zp-ZotpressMetaBox-Type h4 {
+		float: left;
+		padding: 0.75em 0;
+	}
     
     
     
